[package]
name = "ais"
version = "0.12.0"
authors = ["Kevin R <sweetpea-git@tentacle.net>"]
description = "An Automatic Identification System (AIS) parser library"
homepage = "https://github.com/squidpickles/ais"
repository = "https://github.com/squidpickles/ais.git"
documentation = "https://docs.rs/ais"
readme = "README.md"
keywords = ["ais", "nmea"]
categories = ["parser-implementations"]
license = "Apache-2.0"
edition = "2021"

[features]
std = ["nom/std"]
alloc = ["nom/alloc"]
default = ["std"]

[dependencies]
nom = { version = "7", default-features = false }
heapless = { version = "0.7" }

[[bin]]
name = "aisparser"
required-features = ["std"]
